test/assignment/prefix_operator.lox
var a = "a";
!a = "value"; // error: invalid assignment target
